--- a/front-end-yaz/package.json
+++ b/front-end-yaz/package.json
@@ -10,6 +10,7 @@
     "@mdi/js": "^5.6.55",
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
+    "vue-carousel-3d": "^1.0.1",
     "vue-router": "^3.2.0",
     "vuetify": "^2.3.10",
     "vuex": "^3.4.0"
