--- a/front-end-yaz/package.json
+++ b/front-end-yaz/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@mdi/js": "^5.6.55",
+    "axios": "^0.20.0",
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
     "vue-carousel-3d": "^1.0.1",
