--- a/back-end-yaz/package.json
+++ b/back-end-yaz/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon --exec babel-node src/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha --reporter spec"
   },
   "keywords": [],
   "author": "",
@@ -14,7 +14,10 @@
     "@babel/core": "^7.11.6",
     "@babel/node": "^7.10.5",
     "@babel/preset-env": "^7.11.5",
+    "chai": "^4.2.0",
+    "mocha": "^8.2.0",
     "nodemon": "^2.0.4",
+    "request": "^2.88.2",
     "sequelize-cli": "^6.2.0"
   },
   "dependencies": {
