--- a/back-end-yaz/package.json
+++ b/back-end-yaz/package.json
@@ -15,6 +15,7 @@
     "@babel/node": "^7.10.5",
     "@babel/preset-env": "^7.11.5",
     "chai": "^4.2.0",
+    "chai-http": "^4.3.0",
     "mocha": "^8.2.0",
     "nodemon": "^2.0.4",
     "request": "^2.88.2",
