--- a/front-end-yaz/package.json
+++ b/front-end-yaz/package.json
@@ -10,6 +10,7 @@
     "@mdi/js": "^5.6.55",
     "axios": "^0.20.0",
     "core-js": "^3.6.5",
+    "firebase": "^8.0.0",
     "vue": "^2.6.11",
     "vue-carousel-3d": "^1.0.1",
     "vue-router": "^3.2.0",
