--- a/front-end-yaz/package.json
+++ b/front-end-yaz/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build"
+    "build": "vue-cli-service build",
+    "test": "jest"
   },
   "dependencies": {
     "@mdi/js": "^5.6.55",
@@ -22,7 +23,13 @@
     "@vue/cli-plugin-router": "~4.5.0",
     "@vue/cli-plugin-vuex": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
+    "@vue/test-utils": "^1.1.1",
+    "babel-core": "^7.0.0-bridge.0",
+    "babel-jest": "^26.6.3",
+    "babel-preset": "^1.1.7",
+    "jest": "^26.6.3",
     "vue-cli-plugin-vuetify": "~2.0.7",
+    "vue-jest": "^3.0.7",
     "vue-template-compiler": "^2.6.11"
   },
   "browserslist": [
